# exponential_elgamal

./: .gitignore  Nargo.toml  README.md  run_tests.sh
babygiant_native/: Cargo.toml
babygiant_native/src/: main.rs
src/: main.nr
