[package]
name = "babygiant"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.2.0"
ark-ec = "0.2.0"
ark-ed-on-bn254 = "0.2.0"
ark-std = "0.2.0"
hex = "0.4.3"
num_cpus = "1.6.1"
num-bigint = "0.4"
num-traits = "0.2"
rayon = "1.5"  # Add Rayon for parallelism
hashbrown = "0.12"  # Faster HashMap implementation

[profile.release]
opt-level = 3
lto = "fat"  # Enable Link Time Optimization for better performance
codegen-units = 1  # Reduce codegen units for better optimizations
